--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,7 @@
             <h4>Connect</h4>
             <a href="https://x.com/RoyalDAOxyz">Twitter</a>
             <a href="https://t.me/Royal_DAO">Telegram</a>
+            <a href="https://www.linkedin.com/company/royaldao">LinkedIn</a>
             <a href="#">Discord</a>
           </div>
           <div class="footer-section">
